# prette

./: .clang-tidy  .clangd  .cmake-format.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc  .suppress.cppcheck  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile.in  README.md  build.json  vcpkg-configuration.json  vcpkg.json
Benchmarks/: CMakeLists.txt  main.cc
Benchmarks/mcc/: bm_murmur.cc  bm_murmur.h  bm_uri_parser.cc
Benchmarks/prette/: bm_murmur.cc  bm_murmur.h  bm_uri_parser.cc
Sources/: CMakeLists.txt  main.cc
Sources/prette/: aabb.cc  aabb.h  atomic_linked_list.h  big_number.h  bitfield.h  bitset.h  buffer.cc  buffer.h  builder.h  cache.cc  cache.h  circular_buffer.h  class.cc  class.h  color.cc  color.h  common.h  counter.h  crash_report.cc  crash_report.h  cull_face_scope.cc  cull_face_scope.h  db_util.h  dimension.cc  dimension.h  draw_ctx.cc  draw_ctx.h  event.h  file_resolver.h  flags.cc  flags.h  gfx.cc  gfx.h.in  gfx_access.h  gfx_bind_scope.h  gfx_blend_equation.h  gfx_blend_factor.h  gfx_blend_func.cc  gfx_blend_func.h  gfx_blend_scope.cc  (+94 more)
Sources/prette/camera/: camera.h  camera_events.cc  camera_events.h  camera_ortho.cc  camera_ortho.h  camera_perspective.cc  camera_perspective.h
Sources/prette/component/: component.cc  component.h  component_events.cc  component_events.h  component_id.h  component_state.h
Sources/prette/cube_map/: cube_map.cc  cube_map.h  cube_map_builder.cc  cube_map_builder.h  cube_map_face.h
Sources/prette/engine/: engine.cc  engine.h  engine_event_listener.cc  engine_event_listener.h  engine_events.cc  engine_events.h  engine_state.cc  engine_state.h  engine_state_error.cc  engine_state_error.h  engine_state_init.cc  engine_state_init.h  engine_state_running.cc  engine_state_running.h  engine_state_terminated.cc  engine_state_terminated.h  engine_stats.h
Sources/prette/entity/: entity.cc  entity.h  entity_events.h  entity_id.h  entity_set.h  entity_signature.h  entity_tracker.cc  entity_tracker.h  generation.cc  generation.h
Sources/prette/fbo/: fbo.cc  fbo.h  fbo_attachment.h  fbo_attachment_color.cc  fbo_attachment_color.h  fbo_attachment_depth.cc  fbo_attachment_depth.h  fbo_attachment_point.h  fbo_attachment_stencil.cc  fbo_attachment_stencil.h  fbo_attachments.cc  fbo_attachments.h  fbo_builder.cc  fbo_builder.h  fbo_events.cc  fbo_events.h  fbo_factory.cc  fbo_factory.h  fbo_id.cc  fbo_id.h  fbo_pipeline.cc  fbo_pipeline.h  fbo_scope.cc  fbo_scope.h  fbo_scope_bind.cc  fbo_scope_bind.h  fbo_status.h  fbo_target.h
Sources/prette/font/: font.cc  font.h  font_mesh.cc  font_mesh.h  font_renderer.cc  font_renderer.h  font_type.h  glyph.cc  glyph.h  glyph_map.cc  glyph_map.h  truetype.h
Sources/prette/geometry/: rectangle.cc  rectangle.h  shape.h
Sources/prette/gui/: gui_component.cc  gui_component.h  gui_context.cc  gui_context.h  gui_events.cc  gui_events.h  gui_frame.cc  gui_frame.h  gui_tree.cc  gui_tree.h  gui_vertex.cc  gui_vertex.h  gui_window.cc  gui_window.h  nk.cc  nk.h
Sources/prette/hash/: adler32.cc  adler32.h  murmur3.cc  murmur3.h  siphash.h  siphash_digest.h
Sources/prette/ibo/: ibo.cc  ibo.h  ibo_builder.cc  ibo_builder.h  ibo_events.cc  ibo_events.h  ibo_id.cc  ibo_id.h  ibo_scope.cc  ibo_scope.h  ibo_scope_bind.cc  ibo_scope_bind.h  ibo_scope_draw.h  ibo_scope_read.h  ibo_scope_update.h  ibo_scope_write.h
Sources/prette/image/: image.cc  image.h  image_decoder.h  image_format.h  image_jpeg.cc  image_jpeg.h  image_png.cc  image_png.h
Sources/prette/keyboard/: key.cc  key.h  key_glfw.cc  keyboard.cc  keyboard.h  keyboard_event.cc  keyboard_event.h  keyboard_flags.cc  keyboard_flags.h  keyboard_glfw.cc  keyboard_mode.h
Sources/prette/material/: material.cc  material.h  material_builder.cc  material_builder.h  material_component.h  material_document.h  material_events.cc  material_events.h  material_flags.cc  material_flags.h  material_loader.cc  material_loader.h  material_loader_dir.cc  material_loader_dir.h  material_registry.cc  material_registry.h  material_scope.cc  material_scope.h
Sources/prette/mouse/: cursor.cc  cursor.h  cursor_events.cc  cursor_events.h  cursor_glfw.cc  cursor_glfw.h  cursor_json.cc  cursor_json.h  cursor_mode.h  mouse.cc  mouse.h  mouse_button.cc  mouse_button.h  mouse_events.cc  mouse_events.h  mouse_flags.cc  mouse_flags.h  mouse_glfw.cc  mouse_logger.cc  mouse_logger.h  mouse_mode.h
Sources/prette/program/: program.cc  program.h  program_attribute.cc  program_attribute.h  program_builder.cc  program_builder.h  program_events.cc  program_events.h  program_id.h  program_json.cc  program_json.h  program_pipeline.cc  program_pipeline.h  program_printer.cc  program_printer.h  program_scope.cc  program_scope.h  program_scope_apply.cc  program_scope_apply.h  program_scope_link.cc  program_scope_link.h  program_status.cc  program_status.h  program_uniform.cc  program_uniform.h
Sources/prette/properties/: properties.cc  properties.h  properties_parser.cc  properties_parser.h  property.cc  property.h  property_set.cc  property_set.h  property_set_printer.h
Sources/prette/query/: query.cc  query.h  query_id.cc  query_id.h  query_property.h  query_scope.cc  query_scope.h  query_target.h
Sources/prette/rbo/: rbo.cc  rbo.h  rbo_events.cc  rbo_events.h  rbo_factory.cc  rbo_factory.h  rbo_format.h  rbo_id.h  rbo_size.cc  rbo_size.h
Sources/prette/render/: projection_matrix.cc  projection_matrix.h  render_events.cc  render_events.h  render_fbo_pass.cc  render_fbo_pass.h  render_fbo_pipeline.h  render_flags.cc  render_flags.h  render_pass.cc  render_pass.h  render_pass_executor.cc  render_pass_executor.h  (+13 more)
Tests/: CMakeLists.txt  main.cc
Tests/prette/: json_assertions.h  mock_gl.cc  mock_gl.h  mock_glfw.cc  mock_glfw.h  mock_subscription.h  mock_uri_parser_config.h  test_cache.cc  test_cache.h  test_class.cc  test_color.cc  test_file_resolver.cc  test_gfx_blend_scope.cc  test_merkle.cc  test_rapidjson.cc  test_rapidjson.h  test_resolution.cc  test_tag.cc  test_tag_set.cc  test_uint256.cc  test_uri.cc  test_uri_parser.cc
(+276 files in other folders)
